fix our-services spacing

--- a/02-grocery-delivery-website/src/components/our-services/our-services.styles.scss
+++ b/02-grocery-delivery-website/src/components/our-services/our-services.styles.scss
@@ -3,7 +3,8 @@
 	@apply py-24 overflow-hidden;
 
 	&-content {
-		@apply container mx-auto p-4 text-center flex gap-4 flex-col items-center justify-center;
+		@apply container mx-auto p-4 text-center flex gap-4 
+		flex-col items-center justify-center;
 	}
 
 	h3 {
@@ -16,18 +17,21 @@
 
 	h2 {
 		color: #2e2e2e;
-		@apply font-bold capitalize w-11/12 md:w-1/2 mb-12 text-3xl md:text-4xl;
+		@apply font-bold capitalize w-11/12
+		 md:w-1/2 mb-12 text-3xl md:text-4xl;
 	}
 }
 
 .services {
-	@apply flex flex-col flex-wrap md:flex-row items-center justify-center gap-12;
+	@apply flex flex-col flex-wrap w-full
+	md:flex-row items-center justify-evenly gap-12;
 }
 
 .service {
 	width: 300px;
 	height: 310px;
-	@apply relative z-10 flex flex-col gap-4 items-center justify-center rounded-lg bg-white p-8;
+	@apply relative z-10 flex flex-col gap-4 
+	items-center justify-center rounded-lg bg-white p-8;
 
 	h4 {
 		letter-spacing: -0.01em;
